--- a/course-03/exercises/udacity-c3-deployment/k8s/pod-example/pod.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/pod-example/pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: pod-example
 spec:
   containers:
-  - image: scheele/reverseproxy
+  - image: msdtim/reverseproxy
     name: reverseproxy
     imagePullPolicy: Always          
     resources:
