--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,20 @@ before_install:
   - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
   - chmod +x ./kubectl
   - sudo mv ./kubectl /usr/local/bin/kubectl
+  - mkdir ${HOME}/.kube
+  - cp ./udacity-c3-deployment/aws/kubeone/udagram-kubeconfig ${HOME}/.kube/config
 
 
 
 install:
   - docker-compose -f course-03/exercises/udacity-c3-deployment/docker/docker-compose-build.yaml build --parallel 
+  - docker login --username=${DOCKER_USERNAME} --password=${DOCKER_PASSWORD}
+  - docker-compose -f course-03/exercises/udacity-c3-deployment/docker/docker-compose-build.yaml push
+  - kubectl apply -f udacity-c3-deployment/k8s/backend-feed-deployment.yaml
+  - kubectl apply -f udacity-c3-deployment/k8s/backend-user-deployment.yaml
+  - kubectl apply -f udacity-c3-deployment/k8s/frontend-deployment.yaml
+  - kubectl apply -f udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+
+branches:
+  only:
+  - master
