Update with RollingUpdate strategy

--- a/course-03/exercises/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
@@ -5,7 +5,12 @@ metadata:
     service: backend-feed
   name: backend-feed
 spec:
-  replicas: 1
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 25%
   selector:
     matchLabels:
       service: backend-feed
