--- a/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
@@ -7,6 +7,11 @@ metadata:
   name: reverseproxy
 spec:
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 25%
   selector:
     matchLabels:
       service: reverseproxy
