--- a/course-03/exercises/udacity-c3-deployment/k8s/backend-user-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/backend-user-deployment.yaml
@@ -6,6 +6,11 @@ metadata:
   name: backend-user
 spec:
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 25%
   selector:
     matchLabels:
       service: backend-user
