--- a/course-04/exercises/10-udagram-app/package.json
+++ b/course-04/exercises/10-udagram-app/package.json
@@ -7,11 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "elasticsearch": "^15.5.0",
+    "http-aws-es": "^6.0.0",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
+    "@types/elasticsearch": "^5.0.34",
     "aws-sdk": "^2.656.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-aws-documentation": "^1.1.0",
