--- a/course-04/exercises/10-udagram-app/package.json
+++ b/course-04/exercises/10-udagram-app/package.json
@@ -9,12 +9,13 @@
   "dependencies": {
     "elasticsearch": "^15.5.0",
     "http-aws-es": "^6.0.0",
+    "jimp": "^0.6.4",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.17",
-    "@types/node": "^10.12.18",
+    "@types/aws-lambda": "^8.10.50",
     "@types/elasticsearch": "^5.0.34",
+    "@types/node": "^10.12.18",
     "aws-sdk": "^2.656.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-aws-documentation": "^1.1.0",
