--- a/course-04/exercises/10-udagram-app/serverless.yml
+++ b/course-04/exercises/10-udagram-app/serverless.yml
@@ -77,6 +77,9 @@ provider:
       Resource: !GetAtt KMSKey.Arn
 
 functions:
+  RS256Auth:
+    handler: src/lambda/auth/rs256Auth0Authorizer.handler
+
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
 
@@ -94,7 +97,7 @@ functions:
           method: post
           path: groups
           cors: true    
-          authorizer: Auth
+          authorizer: RS256Auth
           request:
             # Schema that will be used to validate incoming requests
             schema:
@@ -120,7 +123,7 @@ functions:
           method: post
           path: groups/{groupId}/images
           cors: true
-          authorizer: Auth
+          authorizer: RS256Auth
           request:
             # Schema that will be used to validate incoming requests
             schema:
