--- a/course-04/exercises/10-udagram-app/serverless.yml
+++ b/course-04/exercises/10-udagram-app/serverless.yml
@@ -10,9 +10,22 @@ custom:
     webpackConfig: ./webpack.config.js
     includeModules: true
 
+  serverless-offline:
+    port: 3003
+
+  dynamodb:
+    stages:
+      - dev
+    start:
+      port: 8000
+      inMemory: true
+      migrate: true
+
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
+  - serverless-dynamodb-local
+  - serverless-offline
 
 provider:
   name: aws
