--- a/course-04/exercises/10-udagram-app/package.json
+++ b/course-04/exercises/10-udagram-app/package.json
@@ -28,6 +28,7 @@
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
+    "serverless-plugin-canary-deployments": "^0.4.7",
     "webpack-node-externals": "^1.7.2"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
