--- a/course-04/exercises/10-udagram-app/package.json
+++ b/course-04/exercises/10-udagram-app/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "aws-xray-sdk": "^2.3.3",
     "elasticsearch": "^15.5.0",
     "http-aws-es": "^6.0.0",
     "jimp": "^0.6.4",
