chore: Package function individually
Supported by serverless out-of-box

--- a/course-04/exercises/10-udagram-app/serverless.yml
+++ b/course-04/exercises/10-udagram-app/serverless.yml
@@ -27,6 +27,9 @@ plugins:
   - serverless-dynamodb-local
   - serverless-offline
   - serverless-plugin-canary-deployments
+# Uncomment to enable individual packaging
+package:
+  individually: true
 
 provider:
   tracing:
