chore: Enable Minimal Privileges
Use serverless-iam-roles-per-function plugin to define iam role permission for getImages function

--- a/course-04/exercises/10-udagram-app/serverless.yml
+++ b/course-04/exercises/10-udagram-app/serverless.yml
@@ -27,6 +27,7 @@ plugins:
   - serverless-dynamodb-local
   - serverless-offline
   - serverless-plugin-canary-deployments
+  - serverless-iam-roles-per-function
 # Uncomment to enable individual packaging
 package:
   individually: true
@@ -139,6 +140,15 @@ functions:
           method: get
           path: groups/{groupId}/images
           cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:Query
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}
+      - Effect: Allow
+        Action:
+          - dynamodb:GetItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.GROUPS_TABLE}
   GetImage:
     handler: src/lambda/http/getImage.handler
     events:
